<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newCardItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/payrdr_large_dimen">

    <ImageView
        android:id="@+id/addNewCardIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/payrdr_medium_dimen"
        android:contentDescription="@string/payrdr_add_new_card_icon"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_add_cards"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/newCardText"
        style="@style/PAYRDRTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/payrdr_medium_dimen"
        android:layout_marginEnd="@dimen/payrdr_small_dimen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/arrow"
        app:layout_constraintStart_toEndOf="@+id/addNewCardIcon"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/payrdr_button_card_new" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="@dimen/payrdr_large_dimen"
        android:layout_height="@dimen/payrdr_large_dimen"
        android:layout_marginEnd="@dimen/payrdr_medium_dimen"
        android:contentDescription="@string/go_to_confirmation_screen_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_right" />
</androidx.constraintlayout.widget.ConstraintLayout>