<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:theme="@style/Theme.App.Material"
    android:background="@color/color_background_bottom_sheet"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@string/payrdr_dismiss_image_button"
                android:id="@+id/dismissButton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/payrdr_medium_dimen"
                android:layout_marginEnd="@dimen/payrdr_medium_dimen"
                android:layout_marginBottom="@dimen/payrdr_medium_dimen"
                android:background="@drawable/background_cancel_bottom_sheet"
                android:padding="10dp"
                android:src="@drawable/ic_xmark" />

            <net.payrdr.mobile.payment.sdk.form.ui.widget.GooglePayButton
                android:id="@+id/googlePayButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/payrdr_medium_dimen"
                android:layout_marginBottom="@dimen/payrdr_medium_dimen"
                app:payrdr_google_pay_button_background_format="outlet"
                app:payrdr_google_pay_button_image_format="without_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/payrdr_medium_dimen"
                android:layout_marginBottom="@dimen/payrdr_medium_dimen"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/box_stroke_color" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/or_pay_by_card"
                    android:textColor="@color/hint_text_color" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/box_stroke_color" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cardList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:id="@+id/bottomLineCardItem"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="@dimen/payrdr_medium_dimen"
                android:background="@color/box_stroke_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/allPaymentMethodLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/payrdr_medium_dimen">

                <TextView
                    android:id="@+id/allPaymentMethod"
                    style="@style/PAYRDRTextViewStyleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payrdr_all_payment_methods"
                    android:layout_marginStart="@dimen/payrdr_medium_dimen"
                    android:layout_marginEnd="@dimen/payrdr_small_dimen"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/arrow"
                    android:layout_width="@dimen/payrdr_large_dimen"
                    android:layout_height="@dimen/payrdr_large_dimen"
                    android:layout_marginEnd="@dimen/payrdr_medium_dimen"
                    android:contentDescription="@string/go_to_confirmation_screen_content_description"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_arrow_right" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>